--- a/database project/src/layouts/Layout.astro
+++ b/database project/src/layouts/Layout.astro
@@ -21,6 +21,7 @@ const { title } = Astro.props;
 	</body>
 </html>
 <style is:global>
+	@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 	:root {
 		--accent: 136, 58, 234;
 		--accent-light: 224, 204, 250;
@@ -33,9 +34,10 @@ const { title } = Astro.props;
 		);
 	}
 	html {
-		font-family: system-ui, sans-serif;
-		background: #13151a;
+		font-family: "Montserrat",system-ui, sans-serif ;
+		background: #121212; 
 		background-size: 224px;
+		color: whitesmoke;
 	}
 	code {
 		font-family:
