Acá hice un 40% de vehiculos y cambiamos el esquema de color

--- a/database project/src/pages/empleados.astro
+++ b/database project/src/pages/empleados.astro
@@ -2,7 +2,6 @@
 import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
 import Sidebar from '../components/Sidebar.astro';
-
 ---
 
 <Layout title="Pagina principal">
@@ -17,7 +16,7 @@ import Sidebar from '../components/Sidebar.astro';
                 <Sidebar />
                 <!-- Contenido principal -->
                 <main class="w-full p-4">
-                    <h1 class="text-2xl font-semibold">Contenido Principal</h1>
+                    <h1 class="text-2xl font-semibold">Esta es la pestania Empleados maje</h1>
                     <p class=>Leiner no bretea</p>
                 </main>
             </div>
