--- a/database project/src/pages/index.astro
+++ b/database project/src/pages/index.astro
@@ -15,12 +15,12 @@ import Card from '../components/Card.astro';
 					<h2 class="text-2xl text-center font-Montserrat mb-4 text-black">Iniciar Sesión</h2>
 					<form id="loginForm">
 						<div class="mb-4">
-							<input type="text" id="username" name="username" class="w-full p-2 border border-gray-300 rounded " placeholder="usuario" required>
+							<input type="text" id="username" name="username" class="w-full p-2 border border-gray-300 rounded text-black" placeholder="usuario" required>
 						</div>
 						<div class="mb-4">
-							<input type="password" id="password" name="password" class="w-full p-2 border border-gray-300 rounded" placeholder="contraseña" required>
+							<input type="password" id="password" name="password" class="w-full p-2 border border-gray-300 rounded text-black" placeholder="contraseña" required>
 						</div>
-						<button type="button" id="loginButton" class="bg-red-500 text-white p-2 rounded w-full">Iniciar Sesión</button>
+						<button type="button" id="loginButton" class="bg-red-500 text-white p-2 rounded w-full ">Iniciar Sesión</button>
 					</form>
 				</div>
 			</div>
