--- a/database project/src/layouts/Layout.astro
+++ b/database project/src/layouts/Layout.astro
@@ -35,9 +35,9 @@ const { title } = Astro.props;
 	}
 	html {
 		font-family: "Montserrat",system-ui, sans-serif ;
-		background: #121212; 
+		background: whitesmoke; 
 		background-size: 224px;
-		color: whitesmoke;
+		color: #121212;
 	}
 	code {
 		font-family:
