--- a/database project/src/pages/vehiculos.astro
+++ b/database project/src/pages/vehiculos.astro
@@ -17,7 +17,7 @@ import Sidebar from '../components/Sidebar.astro';
                 <Sidebar />
                 <!-- Contenido principal -->
                 <main class="w-full p-4">
-                    <h1 class="text-2xl font-semibold">Contenido Principal</h1>
+                    <h1 class="text-2xl font-semibold">Esta es la pestania brum brum</h1>
                     <p class=>Leiner no bretea</p>
                 </main>
             </div>
