Agregué los componentes de NextUI, la conexion no funca, falta ver como añadir datos a la tabla

--- a/database project/src/pages/index.astro
+++ b/database project/src/pages/index.astro
@@ -20,12 +20,10 @@ import Card from '../components/Card.astro';
 						<div class="mb-4">
 							<input type="password" id="password" name="password" class="w-full p-2 border border-gray-300 rounded text-black" placeholder="contraseña" required>
 						</div>
-						<button type="button" id="loginButton" class="bg-red-500 text-white p-2 rounded w-full ">Iniciar Sesión</button>
+						<button type="button" id="loginButton" class="bg-blue-900 text-white p-2 rounded w-full ">Iniciar Sesión</button>
 					</form>
 				</div>
 			</div>
 		</body>
 		</html>
 </Layout>
-
-
