--- a/database project/src/pages/vehiculos.astro
+++ b/database project/src/pages/vehiculos.astro
@@ -2,6 +2,9 @@
 import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
 import Sidebar from '../components/Sidebar.astro';
+import ListaViajes from '../components/ListaViajes';
+import React from 'react';
+import { NextUIProvider } from '@nextui-org/react';
 
 ---
 
@@ -17,8 +20,8 @@ import Sidebar from '../components/Sidebar.astro';
                 <Sidebar />
                 <!-- Contenido principal -->
                 <main class="w-full p-4">
-                    <h1 class="text-2xl font-semibold">Esta es la pestania brum brum</h1>
-                    <p class=>Leiner no bretea</p>
+                    <ListaViajes client:visible></ListaViajes>
+                    
                 </main>
             </div>
         </body>
