--- a/database project/src/components/Sidebar.astro
+++ b/database project/src/components/Sidebar.astro
@@ -2,8 +2,8 @@
 
 
 
-<!-- Sidebar.astro -->
-<aside class="w-full bg-blue-900 text-white p-4">
+<!-- Sidebar.astro bg-blue-900 fondo azul antiguo-->
+<aside class="w-full bg-fuchsia-900 text-white p-4">
     <h2 class="text-4x2 font-semibold text-center"> </h2>
     <ul class="mt-0.800 flex justify-around">
         <li class="mb-2 font-semibold text-2xl"><a href="menu" class="block p-4 hover:text-gray-300">Inicio</a></li>
