--- a/database project/src/pages/index.astro
+++ b/database project/src/pages/index.astro
@@ -1,29 +1,26 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
+import Sidebar from '../components/Sidebar.astro';
 
 ---
 
 <Layout title="Pagina principal">
-	<html>
-		<head>
-			<title>Iniciar Sesión</title>
-		</head>
-		<body class="bg-black">
-			<div class="container mx-auto p-4 mt-10">
-				<div class="bg-white rounded-lg shadow-md p-8 max-w-md mx-auto">
-					<h2 class="text-2xl text-center font-Montserrat mb-4 text-black">Iniciar Sesión</h2>
-					<form id="loginForm">
-						<div class="mb-4">
-							<input type="text" id="username" name="username" class="w-full p-2 border border-gray-300 rounded text-black" placeholder="usuario" required>
-						</div>
-						<div class="mb-4">
-							<input type="password" id="password" name="password" class="w-full p-2 border border-gray-300 rounded text-black" placeholder="contraseña" required>
-						</div>
-						<button type="button" id="loginButton" class="bg-blue-900 text-white p-2 rounded w-full ">Iniciar Sesión</button>
-					</form>
-				</div>
-			</div>
-		</body>
-		</html>
+    <html>
+        <head>
+            <title>Página con Sidebar</title>
+            <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.15/dist/tailwind.min.css" rel="stylesheet">
+        </head>
+        <body class="bg-gray-100">
+            <div class="flex flex-col">
+                <!-- Sidebar -->
+                <Sidebar />
+                <!-- Contenido principal -->
+                <main class="w-full p-4">
+                    <h1 class="text-2xl font-semibold">Contenido Principal</h1>
+                    <p class=>Leiner no para de bretear</p>
+                </main>
+            </div>
+        </body>
+        </html>
 </Layout>
