Hice medio telefonos, falta hacer otra lista para modificar pero es un despiche, nisiquiera me funciono el execute para ver todos los correos de cierta persona en el server

--- a/database project/src/pages/empleados.astro
+++ b/database project/src/pages/empleados.astro
@@ -7,6 +7,7 @@ import TablaEmpleados from '../components/empleados/TablaEmpleados';
 import ModalAgregarEmpleado from '../components/empleados/ModalAgregarEmpleado';
 import ModalModificarEmpleado from '../components/empleados/ModalModificarEmpleado';
 import ModalEliminarEmpleado from '../components/empleados/ModalEliminarEmpleado';
+import ModalCorreosEmpleado from '../components/empleados/ModalCorreosEmpleado';
 
 ---
 
@@ -29,6 +30,8 @@ import ModalEliminarEmpleado from '../components/empleados/ModalEliminarEmpleado
                 <ModalAgregarEmpleado client:visible></ModalAgregarEmpleado>
                 <ModalModificarEmpleado client:visible></ModalModificarEmpleado>
                 <ModalEliminarEmpleado client:visible></ModalEliminarEmpleado>
+                <ModalCorreosEmpleado client:visible></ModalCorreosEmpleado>
+
             </div>
             
         </body>
