--- a/database project/src/pages/transacciones.astro
+++ b/database project/src/pages/transacciones.astro
@@ -2,6 +2,10 @@
 import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
 import Sidebar from '../components/Sidebar.astro';
+import TablaTransacciones from '../components/transacciones/TablaTransacciones';
+import ModalAgregarTransaccion from '../components/transacciones/ModalAgregarTransaccion';
+import ModalModificarTransaccion from '../components/transacciones/ModalModificarTransaccion';
+import ModalEliminarTransaccion from '../components/transacciones/ModalEliminarTransaccion';
 ---
 
 <Layout title="Pagina principal">
@@ -16,10 +20,17 @@ import Sidebar from '../components/Sidebar.astro';
                 <Sidebar />
                 <!-- Contenido principal -->
                 <main class="w-full p-4">
-                    <h1 class="text-2xl font-semibold">Esta es la pestania de la plata</h1>
-                    <p class=>Leiner no bretea</p>
-                </main>
+                    <h1 class="text-2xl font-semibold">Transacciones</h1>
+                    <TablaTransacciones client:visible></TablaTransacciones>
             </div>
+            <div class = "flex gap-4">
+                <ModalAgregarTransaccion client:visible></ModalAgregarTransaccion>
+                <ModalModificarTransaccion client:visible></ModalModificarTransaccion>
+                <ModalEliminarTransaccion client:visible></ModalEliminarTransaccion>
+                
+            </div>
+            
         </body>
+
         </html>
 </Layout>
