--- a/database project/src/pages/empleados.astro
+++ b/database project/src/pages/empleados.astro
@@ -8,7 +8,7 @@ import ModalAgregarEmpleado from '../components/empleados/ModalAgregarEmpleado';
 import ModalModificarEmpleado from '../components/empleados/ModalModificarEmpleado';
 import ModalEliminarEmpleado from '../components/empleados/ModalEliminarEmpleado';
 import ModalCorreosEmpleado from '../components/empleados/ModalCorreosEmpleado';
-
+import ModalTelefonosEmpleado from '../components/empleados/ModalTelefonosEmpleado';
 ---
 
 <Layout title="Pagina principal">
@@ -31,7 +31,7 @@ import ModalCorreosEmpleado from '../components/empleados/ModalCorreosEmpleado';
                 <ModalModificarEmpleado client:visible></ModalModificarEmpleado>
                 <ModalEliminarEmpleado client:visible></ModalEliminarEmpleado>
                 <ModalCorreosEmpleado client:visible></ModalCorreosEmpleado>
-
+                <ModalTelefonosEmpleado client:visible></ModalTelefonosEmpleado>
             </div>
             
         </body>
