add client pag and server

--- a/database project/src/components/Sidebar.astro
+++ b/database project/src/components/Sidebar.astro
@@ -9,7 +9,7 @@
         <li class="mb-2 font-semibold text-2xl"><a href="vehiculos" class="block p-4 hover:text-gray-300">Vehiculos</a></li>
         <li class="mb-2 font-semibold text-2xl"><a href="empleados" class="block p-4 hover:text-gray-300">Empleados</a></li>
         <li class="mb-2 font-semibold text-2xl"><a href="transacciones" class="block p-4 hover:text-gray-300">Transacciones</a></li> 
-        <li class="mb-2 font-semibold text-2xl"><a href="about" class="block p-4 hover:text-gray-300">Clientes</a></li>                 
+        <li class="mb-2 font-semibold text-2xl"><a href="clientes" class="block p-4 hover:text-gray-300">Clientes</a></li>                 
         <li class="mb-2 font-semibold text-2xl"><a href="about" class="block p-4 hover:text-gray-300">About</a></li>
         
     </ul>
