Faltan las consultas

--- a/database project/src/components/Sidebar.astro
+++ b/database project/src/components/Sidebar.astro
@@ -1,16 +1,16 @@
 
 
 <!-- Sidebar.astro bg-blue-900 fondo azul antiguo-->
-<aside class="w-full bg-orange-500 text-white p-4">
+<aside class="w-full bg-blue-900 text-white p-4">
     <h2 class="text-4x2 font-semibold text-center"> </h2>
     <ul class="mt-0.800 flex justify-around">
         <li class="mb-2 font-semibold text-2xl"><a href="/" class="block p-4 hover:text-gray-300">Inicio</a></li>
         <li class="mb-2 font-semibold text-2xl"><a href="viajes" class="block p-4 hover:text-gray-300">Viajes</a></li>
         <li class="mb-2 font-semibold text-2xl"><a href="vehiculos" class="block p-4 hover:text-gray-300">Vehiculos</a></li>
+        <li class="mb-2 font-semibold text-2xl"><a href="mantenimientos" class="block p-4 hover:text-gray-300">Mantenimientos</a></li>
         <li class="mb-2 font-semibold text-2xl"><a href="empleados" class="block p-4 hover:text-gray-300">Empleados</a></li>
         <li class="mb-2 font-semibold text-2xl"><a href="transacciones" class="block p-4 hover:text-gray-300">Transacciones</a></li> 
         <li class="mb-2 font-semibold text-2xl"><a href="clientes" class="block p-4 hover:text-gray-300">Clientes</a></li>                 
         <li class="mb-2 font-semibold text-2xl"><a href="about" class="block p-4 hover:text-gray-300">About</a></li>
-        
     </ul>
 </aside>
