--- a/database project/src/pages/about.astro
+++ b/database project/src/pages/about.astro
@@ -9,6 +9,5 @@ import Card from '../components/Card.astro';
     <h1>
         Proyecto Realizado por
     </h1>
-    <h1 class="text-green-400"> Noni, Jeison y "Leiner"</h1>
-
+    <h1 class="text-green-400"> Noni, Jeison y Leiner</h1>
 </Layout>
