--- a/database project/src/pages/clientes.astro
+++ b/database project/src/pages/clientes.astro
@@ -8,7 +8,8 @@ import TablaClientes from '../components/clientes/TablaClientes';
 import ModalAgregarCliente from '../components/clientes/ModalAgregarCliente';
 import ModalModificarCliente from '../components/clientes/ModalModificarCliente';
 import ModalEliminarCliente from '../components/clientes/ModalEliminarCliente';
-
+import ModalCorreosCliente from '../components/clientes/ModalCorreosCliente';
+import ModalTelefonosCliente from '../components/clientes/ModalTelefonosCliente';
 
 ---
 
@@ -31,6 +32,8 @@ import ModalEliminarCliente from '../components/clientes/ModalEliminarCliente';
                 <ModalAgregarCliente client:visible></ModalAgregarCliente>
                 <ModalModificarCliente client:visible></ModalModificarCliente>
                 <ModalEliminarCliente client:visible></ModalEliminarCliente>
+                <ModalCorreosCliente client:visible></ModalCorreosCliente>
+                <ModalTelefonosCliente client:visible></ModalTelefonosCliente>
             </div>
             
         </body>
