--- a/database project/src/pages/empleados.astro
+++ b/database project/src/pages/empleados.astro
@@ -23,7 +23,7 @@ import ModalTelefonosEmpleado from '../components/empleados/ModalTelefonosEmplea
                 <Sidebar />
                 <!-- Contenido principal -->
                 <main class="w-full p-4">
-                    <h1 class="text-2xl font-semibold">Esta es la pestania Empleados maje</h1>
+                    <h1 class="text-2xl font-semibold">Empleados</h1>
                     <TablaEmpleados client:visible></TablaEmpleados>
             </div>
             <div class = "flex gap-4">
